# ffmpeg-mlu

./: CHANGELOG.md  LICENSE  README.md  README_cn.md  README_v3.md  build_ffmpeg.sh  compile_ffmpeg.sh  compile_ffmpeg_v3.sh  env.sh  ffmpeg4.2_mlu.patch  ffmpeg4.2_mlu200.patch  ffmpeg4.2_mlu300.patch  ffmpeg4.2_mlu_v3.patch  ffmpeg4.4_mlu300.patch  requirements.sh
dockerfile/: Dockerfile
mlu_op/: CMakeLists.txt
mlu_op/data/images/: 1920_1080_nv12_1.yuv  1920_1080_nv21_1.yuv  1920_1080_yuv420p_1.yuv  720p.yuv
mlu_op/include/: mlu_loging.hpp  mluop.h
mlu_op/op_src_code/convert_yuv2rgb/: kernel.h  mluop.h  run.sh  yuv2rgb.cc  yuv_to_rgb.mlu  yuv_to_rgb_mlu.h  yuv_to_rgb_union1.mlu
mlu_op/op_src_code/resize/: Resize.cpp  ResizeKernel.h  ResizeKernel.mlu  resize.cpp
mlu_op/op_src_code/resize_and_convert/: ResizeAndConvert.cpp  ResizeAndConvertKernel.h  ResizeAndConvertKernel.mlu  ResizeAndConvertKernelMlu220.mlu  ResizeAndConvertKernelMlu270.mlu  ResizeAndConvertMacro.h  half.cpp  half.hpp  resize_and_colorcvt.cpp
mlu_op/op_src_code/resize_yuv2yuv/: BANG_LOG.h  resizeYuvKernel.h  resizeYuvKernel.mlu  resize_kernel.cpp  resize_yuv2yuv.cpp
mlu_op/op_src_code/rgb2rgb_resize/: mluop.h  resize_rgb.cc  resize_rgb.mlu  resize_rgb_block.mlu  resize_rgb_mlu.h  run.sh
mlu_op/op_src_code/rgb2rgb_resize_b/: env.sh  kernel.h  resize_rgb.cc  resize_rgb_block.mlu  resize_rgb_mlu.h  run.sh
mlu_op/src/: infer_sr_mlu.cpp  overlay.cpp  rgbx2rgbx_convert.cpp  rgbx2rgbx_invoke_resize.cpp  rgbx2rgbx_resize.cpp  rgbx2yuv_convert.cpp  yuv2rgbx_convert.cpp  yuv2rgbx_invoke_convert.cpp  yuv2rgbx_resize_cvt.cpp  yuv2yuv_invoke_resize.cpp  yuv2yuv_plugin_resize.cpp  yuv2yuv_resize.cpp
mlu_op/testcase/: CMakeLists.txt  infer_sr_op.cpp  input.conf  mluop_common.cpp  mluop_context.hpp  mluop_list.h  overlay_op.cpp  rgbx2rgbx_convert_op.cpp  rgbx2rgbx_resize_op.cpp  rgbx2yuv_convert_op.cpp  test_mluop.c  test_mluop.cpp  test_mluop.h  utils.hpp  yuv2rgb_convert_op.cpp  yuv2rgbx_convert_op.cpp  yuv2rgbx_resize_cvt_op.cpp  yuv2yuv_resize_op.cpp
mluop_plugin/: CMakeLists.txt
mluop_plugin/include/: mluop_plugin.h
mluop_plugin/src/: yuv2yuv_resize.cpp
mluop_plugin/testcase/: CMakeLists.txt  test_mluop.c
samples/ffmpeg-mlu_video_decoder/: CMakeLists.txt  README.md
samples/ffmpeg-mlu_video_decoder/src/: decoder.cpp  decoder.h  main.cpp
samples/ffmpeg-mlu_video_encoder/: CMakeLists.txt  README.md
samples/ffmpeg-mlu_video_encoder/src/: main.cpp  video_encoder.cpp  video_encoder.h
tools/: clean_ffmpeg.sh  compile_3rdparty.sh  compile_ffmpeg_deb.sh  compile_ffmpeg_require_lib.sh  install_ffmpeg_with_deps.sh  run_prechkin.sh
